--- a/templates/room.html
+++ b/templates/room.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <div class="message-box">
-  <h2>Chat Room: {{code}}</h2>
-  <div class="messages" id="messages"></div>
+  <h2>Chat Room: {{ code }}</h2>
+  <div class="messages" id="messages" style="height: 400px; overflow-y: scroll;"></div>
   <div class="inputs">
     <input
       type="text"
@@ -17,7 +18,6 @@
 </div>
 <script type="text/javascript">
   var socketio = io();
-
   const messages = document.getElementById("messages");
 
   const createMessage = (name, msg) => {
@@ -31,10 +31,9 @@
         </span>
     </div>
     `;
-    messages.innerHTML += content; // Append new message
-    messages.scrollTop = messages.scrollHeight; // Scroll to bottom
-};
-
+    messages.innerHTML += content;
+    messages.scrollTop = messages.scrollHeight; // Scroll to the bottom
+  };
 
   socketio.on("message", (data) => {
     createMessage(data.name, data.message);
@@ -45,12 +44,13 @@
     if (message.value == "") return;
     socketio.emit("message", { data: message.value });
     message.value = ""; // Clear input after sending
-};
+  };
 
+  // Fetch existing messages when the room loads
+  fetch("/messages")
+    .then(response => response.json())
+    .then(data => {
+      data.forEach(msg => createMessage(msg.name, msg.message));
+    });
 </script>
-{% for msg in messages %}
-<script type="text/javascript">
-  createMessage("{{ msg.name }}", "{{ msg.message }}");
-</script>
-{% endfor %}
 {% endblock %}
